Add padding to the navbar and alaing button icon style the form

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<title></title>
-	 <link rel = "stylesheet" type = "text/css" href = "style/styles.css" />
+	<link rel = "stylesheet" type = "text/css" href = "style/styles.css" />
 </head>
 <body>
 	<!-- /header -->
@@ -19,9 +20,9 @@
 			<div> <button class="navbar-button" type="">Jobs</button> </div>
 			<div> <button class="navbar-button" type="">Newsletter</button> </div>
 			<div class="more-button"> 
-				<button  style="padding-right: 0px;" class="navbar-button" type="">More <img class="menu-cat-img" src="images/menu-cat.svg" alt=""></button> 
+				<button  style="padding-right: 0px;" class="buIcon" type="">More </button><img class="menu-cat-img" src="images/menu-cat.svg" alt=""> 
 			</div>
-			<div><p>for search</p></div>
+			<div class='formContainer'><form><div class='inputWhite'><i class="fa fa-search" aria-hidden="true"></i><input class="searchForm" type='text'></div></form></div>
 		</nav>
 
 	</header>
