Fix margin issues in the header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="more-button"> 
 				<button  style="padding-right: 0px;" class="buIcon" type="">More </button><img class="menu-cat-img" src="images/menu-cat.svg" alt=""> 
 			</div>
-			<div class='formContainer'><form><div class='inputWhite'><i class="fa fa-search" aria-hidden="true"></i><input class="searchForm" type='text'></div></form></div>
+			<div class='formContainer'><form><div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input placeholder="search articles..." class="searchForm" type='text'></div></form></div>
 		</nav>
 
 	</header>
