Start to adding latest articles section.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 			</div>
 			<div class='formContainer'><form><div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input placeholder="search articles..." class="searchForm" type='text'></div></form></div>
 		</nav>
-
 	</header>
 	<main>
-		
+		<section class="latest-articles">
+			<div style="background: #757575;"><h1>1</h1></div>
+			<div style="background: #858585;"><h1>2</h1></div>
+			<div style="background: #959595;"><h1>3</h1></div>
+			<div style="background: #555555;"><h1>4</h1></div>
+		</section>
 	</main>
 	<footer>
 		
