Add profile img and content sett transfor rotate

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	</header>
 	<main>
 		<section class="latest-articles">
-			<div style="background: #757575;"><h1>1</h1></div>
-			<div style="background: #858585;"><h1>2</h1></div>
-			<div style="background: #959595;"><h1>3</h1></div>
-			<div style="background: #555555;"><h1>4</h1></div>
+			<div style="background: #757575;"><div class='imgContainer'><div><img class='profileImg'src='images/carmine-zaccagnino-200x200.jpg' alt=''></div><p>Carmin Zaccagnino wrote</p></div><h1>Solving Common Cross-Platform Issues When working with flutter</h1><p>Leave a Comment</p><span>Apps</span><span>Perfomance</span></div>
+			<div style="background: #858585;"><div class='imgContainer'><div><img class='profileImg'src='images/chidi-orji-200x200.jpg' alt=''></div><p>Chidi Orji wrote</p></div><h1>Mirage js Deep Dive Using Mirage JS and cypress For UI Testing (Part 4)</h1><p>Leave a Comment</p><span>UI</span><span>API</span><span>Testing</span></div>
+			<div style="background: #959595;"><div class='imgContainer'><div><img class='profileImg'src='images/drew-mclellan-profile-pic.jpg' alt=''></div><p>Drew MacLellan wrote</p></div><h1>Better Reduce with Immer</h1></div>
+			<div style="background: #555555;"><div class='imgContainer'><div><img class='profileImg'src='images/kelvin-omereshone-200x200.jpg' alt='' width='200'></div><p>Kevin Omershone wrote</p></div><h1>4</h1></div>
 		</section>
 	</main>
 	<footer>
