Add picture hover effect

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 	<title></title>
-	<link rel = "stylesheet" type = "text/css" href = "style/styles.css" />
+	<link rel="stylesheet" type="text/css" href="style/styles.css" />
 </head>
+
 <body>
 	<!-- /header -->
 	<header id="header" class="">
@@ -19,22 +24,55 @@
 			<div> <button class="navbar-button" type="">Membership</button> </div>
 			<div> <button class="navbar-button" type="">Jobs</button> </div>
 			<div> <button class="navbar-button" type="">Newsletter</button> </div>
-			<div class="more-button"> 
-				<button  style="padding-right: 0px;" class="buIcon" type="">More </button><img class="menu-cat-img" src="images/menu-cat.svg" alt=""> 
+			<div class="more-button">
+				<button style="padding-right: 0px;" class="buIcon" type="">More </button><img class="menu-cat-img"
+					src="images/menu-cat.svg" alt="">
 			</div>
-			<div class='formContainer'><form><div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input placeholder="search articles..." class="searchForm" type='text'></div></form></div>
+			<div class='formContainer'>
+				<form>
+					<div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input
+							placeholder="search articles..." class="searchForm" type='text'></div>
+				</form>
+			</div>
 		</nav>
 	</header>
 	<main>
-		<section class="latest-articles">
-			<div style="background: #757575;"><div class='imgContainer'><div><img class='profileImg'src='images/carmine-zaccagnino-200x200.jpg' alt=''></div><p>Carmin Zaccagnino wrote</p></div><h1>Solving Common Cross-Platform Issues When working with flutter</h1><p>Leave a Comment</p><span>Apps</span><span>Perfomance</span></div>
-			<div style="background: #858585;"><div class='imgContainer'><div><img class='profileImg'src='images/chidi-orji-200x200.jpg' alt=''></div><p>Chidi Orji wrote</p></div><h1>Mirage js Deep Dive Using Mirage JS and cypress For UI Testing (Part 4)</h1><p>Leave a Comment</p><span>UI</span><span>API</span><span>Testing</span></div>
-			<div style="background: #959595;"><div class='imgContainer'><div><img class='profileImg'src='images/drew-mclellan-profile-pic.jpg' alt=''></div><p>Drew MacLellan wrote</p></div><h1>Better Reduce with Immer</h1></div>
-			<div style="background: #555555;"><div class='imgContainer'><div><img class='profileImg'src='images/kelvin-omereshone-200x200.jpg' alt='' width='200'></div><p>Kevin Omershone wrote</p></div><h1>4</h1></div>
+		<section class="latest-articles font-balmasiq">
+			<div style="background: #757575;">
+				<div class='imgContainer'>
+					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg' alt=''></div>
+					<div><p class="profileName">Carmin Zaccagnino <em>wrote</em></p></div>
+				</div>
+				<h1>Solving Common Cross-Platform Issues When working with flutter</h1>
+				<p>Leave a Comment</p><span>Apps</span><span>Perfomance</span>
+			</div>
+			<div style="background: #858585;">
+				<div class='imgContainer'>
+					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''></div>
+					<div><p class="profileName">Chidi Orji <em>wrote</em></p></div>
+				</div>
+				<h1>Mirage js Deep Dive Using Mirage JS and cypress For UI Testing (Part 4)</h1>
+				<p>Leave a Comment</p><span>UI</span><span>API</span><span>Testing</span>
+			</div>
+			<div style="background: #959595;">
+				<div class='imgContainer'>
+					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg' alt=''></div>
+					<div><p class="profileName">Drew MacLellan <em>wrote</em></p></div>
+				</div>
+				<h1>Better Reduce with Immer</h1>
+			</div>
+			<div style="background: #555555;">
+				<div class='imgContainer'>
+					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg' alt='' width='200'></div>
+					<div><p class="profileName">Kevin Omershone <em>wrote</em></p></div>
+				</div>
+				<h1>4</h1>
+			</div>
 		</section>
 	</main>
 	<footer>
-		
+
 	</footer>
 </body>
+
 </html>
