Update some part in the latest article div elements

--- a/index.html
+++ b/index.html
@@ -38,35 +38,49 @@
 	</header>
 	<main>
 		<section class="latest-articles font-balmasiq">
+			<div style="background: #555555;">
+				<div class='imgContainer'>
+					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
+							alt='' width='200'></div>
+					<div>
+						<p class="profileName">Kevin Omershone <em>wrote</em></p>
+					</div>
+					
+				</div>
+				<h1>What Vitruvius Can Teach Us About Web Design</h1>
+				<p>Leave a Comment</p><span>Apps</span><span>Perfomance</span>
+			</div>
 			<div style="background: #757575;">
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg' alt=''></div>
-					<div><p class="profileName">Carmin Zaccagnino <em>wrote</em></p></div>
+					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg'
+							alt=''></div>
+					<div>
+						<p class="profileName">Carmin Zaccagnino <em>wrote</em></p>
+					</div>
 				</div>
-				<h1>Solving Common Cross-Platform Issues When working with flutter</h1>
+				<h1>Solving Common Cross-Platform Issues When Working with Flutter</h1>
 				<p>Leave a Comment</p><span>Apps</span><span>Perfomance</span>
 			</div>
 			<div style="background: #858585;">
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''></div>
-					<div><p class="profileName">Chidi Orji <em>wrote</em></p></div>
+					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''>
+					</div>
+					<div>
+						<p class="profileName">Chidi Orji <em>wrote</em></p>
+					</div>
 				</div>
-				<h1>Mirage js Deep Dive Using Mirage JS and cypress For UI Testing (Part 4)</h1>
+				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)</h1>
 				<p>Leave a Comment</p><span>UI</span><span>API</span><span>Testing</span>
 			</div>
 			<div style="background: #959595;">
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg' alt=''></div>
-					<div><p class="profileName">Drew MacLellan <em>wrote</em></p></div>
+					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg'
+							alt=''></div>
+					<div>
+						<p class="profileName">Drew MacLellan <em>wrote</em></p>
+					</div>
 				</div>
 				<h1>Better Reduce with Immer</h1>
-			</div>
-			<div style="background: #555555;">
-				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg' alt='' width='200'></div>
-					<div><p class="profileName">Kevin Omershone <em>wrote</em></p></div>
-				</div>
-				<h1>4</h1>
 			</div>
 		</section>
 	</main>
