Adding arrow Icon also create articles conteiner and add content

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 					</div>
 					
 				</div>
-				<h1>What Vitruvius Can Teach Us About Web Design</h1>
-				<p>Leave a Comment</p><span>Apps</span><span>Perfomance</span>
+				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p></h1>
+				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
+				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #757575;">
 				<div class='imgContainer'>
@@ -59,7 +60,9 @@
 					</div>
 				</div>
 				<h1>Solving Common Cross-Platform Issues When Working with Flutter</h1>
-				<p>Leave a Comment</p><span>Apps</span><span>Perfomance</span>
+				<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p>
+				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
+				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #858585;">
 				<div class='imgContainer'>
@@ -69,8 +72,9 @@
 						<p class="profileName">Chidi Orji <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)</h1>
-				<p>Leave a Comment</p><span>UI</span><span>API</span><span>Testing</span>
+				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p></h1>
+				<div class='spanContainer'><span>UI</span><span>API</span><span>Testing</span></div>
+				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #959595;">
 				<div class='imgContainer'>
@@ -80,9 +84,31 @@
 						<p class="profileName">Drew MacLellan <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Better Reduce with Immer</h1>
+				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p></h1>
+				<div class='spanContainer'><span>Smashing Podcast</span></div>
+				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 		</section>
+		<div class='articlesContainer'>
+			<div class="articlesDes">
+				<span></span>
+				<h2>Which Video Confering Tool Are More Accesible</h2>
+				<p></p>
+				<p>In this article, Claudio Luis Vera explains what to keep in mind when choosing between video conferencing tools to benefit everyone on your team — including those with disabilities.</p>
+			</div>
+			<div class="articlesDes">
+				<span></span>
+				<h2>Internatiolization In Vue W ith The Vue |18n PLugin</h2>
+				<p></p>
+				<p></p>
+			</div>
+			<div class="articlesDes">
+				<span></span>
+				<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+				<p></p>
+				<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up in our application.</p>
+			</div>
+		</div>
 	</main>
 	<footer>
 
