Add Membership part

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 					<div>
 						<p class="profileName">Kevin Omershone <em>wrote</em></p>
 					</div>
-					
+
 				</div>
-				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p></h1>
+				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o"
+							aria-hidden="true"></i> Comment</p>
+				</h1>
 				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
@@ -72,7 +74,9 @@
 						<p class="profileName">Chidi Orji <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p></h1>
+				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i
+							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
+				</h1>
 				<div class='spanContainer'><span>UI</span><span>API</span><span>Testing</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
@@ -84,31 +88,62 @@
 						<p class="profileName">Drew MacLellan <em>wrote</em></p>
 					</div>
 				</div>
-				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p></h1>
+				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<p class='inline'><i
+							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
+				</h1>
 				<div class='spanContainer'><span>Smashing Podcast</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 		</section>
-		<div class='articlesContainer'>
-			<div class="articlesDes">
-				<span></span>
-				<h2>Which Video Confering Tool Are More Accesible</h2>
-				<p></p>
-				<p>In this article, Claudio Luis Vera explains what to keep in mind when choosing between video conferencing tools to benefit everyone on your team — including those with disabilities.</p>
+		<section class="wholeMembership">
+			<div class="membership">
+				<div class="membershipText">
+					<p>All you want is a fast, secure web? That's why we use ad blockers, too, you know. We gotta keep
+						those
+						servers running though... So we've set up <a href="">Membership</a> for smart cookies like you.
+						Coming up next:</p>
+					<ul>
+						<li>Smashing TV Session with on “”,</li>
+						<li> New discounts on tools, services and tutorials,</li>
+						<li> ...plus a seasoned selection of fancy cats.</li>
+					</ul>
+					<a class="membershipButton" href="#">About Smashing Membership</a>
+				</div>
+				<div class="membershipImage">
+					<img src="images/cat-firechat.svg" alt="">
+				</div>
 			</div>
-			<div class="articlesDes">
-				<span></span>
-				<h2>Internatiolization In Vue W ith The Vue |18n PLugin</h2>
-				<p></p>
-				<p></p>
+		</section>
+
+		<section class="wholeArticlesSection">
+			<div class='articlesContainer'>
+				<div class="articlesDes">
+					<span></span>
+					<h2>Which Video Confering Tool Are More Accesible</h2>
+					<p></p>
+					<p>In this article, Claudio Luis Vera explains what to keep in mind when choosing between video
+						conferencing tools to benefit everyone on your team — including those with disabilities.</p>
+				</div>
+				<div class="articlesDes">
+					<span></span>
+					<h2>Internatiolization In Vue W ith The Vue |18n PLugin</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="articlesDes">
+					<span></span>
+					<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+					<p></p>
+					<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
+						tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up in
+						our application.</p>
+				</div>
 			</div>
-			<div class="articlesDes">
-				<span></span>
-				<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
-				<p></p>
-				<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up in our application.</p>
-			</div>
-		</div>
+		</section>
+		<section>
+			<br>
+		</section>
+
 	</main>
 	<footer>
 
