--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style/styles.css" />
 </head>
@@ -155,6 +157,17 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="wholeShippingNow">
+				<div class="shippingNow">
+					<div id="element1">JUNE 2020 • SHIPPING NOW</div>
+					<div id="element2">Meet “Click!”: Encourage Clicks</div>
+					<div id="element3">Without Shady Tricks</div>
+					<div id="element4">Our new book on how to boost business KPIs, build trust and address doubts effectively — without alienating people along the way. By Paul Boag.</div>
+					<div id="element5"> <a>Jump to table of contents  <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a></div>
+				</div>
+		</section>
+
 		<section>
 			<br>
 		</section>
