--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 					
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
 				</div>
+				<div class="articlesDes">
+					Grammarly
+				</div>
 			</div>
 		</section>
 
