add grammarly container also align container and set responsiness to containers

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 	</header>
 	<main>
 		<section class="latest-articles font-balmasiq">
-			<div style="background: #555555;">
+			<div style="background: #555555;" class='profileCon'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
-							alt='' width='200'></div>
+							alt='' ></div>
 					<div>
 						<p class="profileName">Kevin Omershone <em>wrote</em></p>
 					</div>
@@ -55,7 +55,7 @@
 				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #757575;">
+			<div style="background: #757575;" class='profileCon'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg'
 							alt=''></div>
@@ -68,7 +68,7 @@
 				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #858585;">
+			<div style="background: #858585;" class='profileCon'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''>
 					</div>
@@ -82,7 +82,7 @@
 				<div class='spanContainer'><span>UI</span><span>API</span><span>Testing</span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #959595;">
+			<div style="background: #959595;" class='profileCon'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg'
 							alt=''></div>
@@ -155,8 +155,15 @@
 					
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
 				</div>
-				<div class="articlesDes">
-					Grammarly
+				<div class="articlesGra">
+					<div class='gramarly'>
+						<div class='gramrBlock'>
+							<div><img class='gramIcon'src="images/logo-grammarly.svg" alt="grammarly"></div>
+							<p>Grammarly helps shape the way millions of people communicate every day!</p>
+							<button class='gramarButton'>JOIN THE TEAM!</button>
+						</div>
+						
+					</div>
 				</div>
 			</div>
 		</section>
