add smashing container and content also changin grid styles

--- a/index.html
+++ b/index.html
@@ -157,13 +157,22 @@
 				</div>
 				<div class="articlesGra">
 					<div class='gramarly'>
+						<span class='gramarlyPtop'>Our friends and supporters</span>
 						<div class='gramrBlock'>
 							<div><img class='gramIcon'src="images/logo-grammarly.svg" alt="grammarly"></div>
 							<p>Grammarly helps shape the way millions of people communicate every day!</p>
 							<button class='gramarButton'>JOIN THE TEAM!</button>
-						</div>
-						
+						</div>						
 					</div>
+				</div>
+				<div class='smashingAdver'>
+					<div class='smashingContain'>
+						<div><img src="images/singing-barista.svg" alt="" class="catSmash"></div>
+						<a class='smashinHeader'href="#">1,651 smashing members</a>
+						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. </a>
+						<div class='smashBconta'><button class='smashingButton'>Explore Features </div>
+					</div>
+			
 				</div>
 			</div>
 		</section>
@@ -178,9 +187,7 @@
 				</div>
 		</section>
 
-		<section>
-			<br>
-		</section>
+		
 
 	</main>
 	<footer>
