Update ShippingNow part

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 					<div id="element3">Without Shady Tricks</div>
 					<div id="element4">Our new book on how to boost business KPIs, build trust and address doubts effectively — without alienating people along the way. By Paul Boag.</div>
 					<div id="element5"> <a>Jump to table of contents  <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a></div>
+					<div class="shippingNowImage">
+						<img src="images/click-illustration.svg" alt="">
+					</div>
 				</div>
 		</section>
 
