Add Person of Week Section and Update Community Links.

--- a/index.html
+++ b/index.html
@@ -196,18 +196,84 @@
 				</div>
 			</div>
 		</section>
-		<section class="wholeCommunityLinks">
+		<section class="wholePersonOfWeek">
 			<div class="personOfWeek">
 				<div class="personOfWeekProfileImageDiv">
 					<img src='images/person-of-week.png' alt=''>
 				</div>
 				<div class="personOfWeekText">
 					<h2>PERSON OF THE WEEK</h2>
-					<h4>April Speight ( <a href="#">@vogueandcode</a> ) has been in the tech industry for seven years after a career in luxury fashion as a menswear stylist and visual merchandiser. Currently a Cloud Advocate at Microsoft, she loves working with bots and voice-enabled devices and creates new realities within the world of spatial computing. To help others get started on their XR journey, April shares coding tutorials on her <a href="#">site</a> and on her <a href="#">YouTube</a> channel. She has also written a <a href="#">Python programming book for children</a>. Thank you for sharing and caring, dear April!</h4>
+					<h4>April Speight ( <a href="#">@vogueandcode</a> ) has been in the tech industry for seven years
+						after a career in luxury fashion as a menswear stylist and visual merchandiser. Currently a
+						Cloud Advocate at Microsoft, she loves working with bots and voice-enabled devices and creates
+						new realities within the world of spatial computing. To help others get started on their XR
+						journey, April shares coding tutorials on her <a href="#">site</a> and on her <a
+							href="#">YouTube</a> channel. She has also written a <a href="#">Python programming book for
+							children</a>. Thank you for sharing and caring, dear April!</h4>
 				</div>
 			</div>
-			<div class="communityLinks">
-				
+		</section>
+		<section class="wholeCommunityLinks">
+			<div class="communityLinks font-balmasiq">
+				<div class="linkContainer">
+					<div class="imgContainer">
+						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+					</div>
+					<div class="linkTexts">
+						<h2><a href="#">Vadim Bauer</a> wrote</h2>
+						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<div class="dateAndCOmme">
+							<span>june 22, 2020 —</span>
+							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a creative
+								solution that thinks outside the box.</span>
+						</div>
+					</div>
+				</div>
+				<div class="linkContainer">
+					<div class="imgContainer">
+						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+					</div>
+					<div class="linkTexts">
+						<h2><a href="#">Vadim Bauer</a> wrote</h2>
+						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<div class="dateAndCOmme">
+							<span>june 22, 2020 —</span>
+							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a creative
+								solution that thinks outside the box.</span>
+						</div>
+					</div>
+				</div>
+				<div class="linkContainer">
+					<div class="imgContainer">
+						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+					</div>
+					<div class="linkTexts">
+						<h2><a href="#">Vadim Bauer</a> wrote</h2>
+						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<div class="dateAndCOmme">
+							<span>june 22, 2020 —</span>
+							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a creative
+								solution that thinks outside the box.</span>
+						</div>
+					</div>
+				</div>
+				<div class="linkContainer">
+					<div class="imgContainer">
+						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+					</div>
+					<div class="linkTexts">
+						<h2><a href="#">Vadim Bauer</a> wrote</h2>
+						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<div class="dateAndCOmme">
+							<span>june 22, 2020 —</span>
+							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a creative
+								solution that thinks outside the box.</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<a class="more-content-button" href="#">MORE LINKS ON TWITTER <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 			</div>
 		</section>
 
