add smashing tv container and other articles

--- a/index.html
+++ b/index.html
@@ -172,7 +172,62 @@
 						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month. </a>
 						<div class='smashBconta'><button class='smashingButton'>Explore Features </div>
 					</div>
-			
+				</div>
+				<div class="articlesDes">
+					<div class="textContainer">
+						<span>8 Days ago</span>
+						<h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</h2>
+						<p>by <a href="#">Kelvin Omereshone</a></p>
+						<p>
+							In this third part of Mirage JS Deep Dive series, we will be focusing on using,  in Mirage for a better handle on simulating an actual backend server.
+						</p>
+
+					</div>
+					
+					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
+				</div>
+				<div class="articlesDes">
+					<div class="textContainer">
+						<span>3 Days ago</span>
+						<h2>Is Your Website Stressing Out Visitors?</h2>
+						<p>by <a href="#">Suzanne Scacca</a></p>
+						<p>Stress isn’t just something that makes people feel uncomfortable. There are many things that might invoke this response from your visitors, including the design. In this article, we’re going to look at some ways to de-stress your design.
+						</p>
+					</div>					
+					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
+				</div>
+				<div class="articlesDes">
+					<div class="textContainer">
+						<span>11 Days ago</span>
+						<h2>12 Ways To Improve User Interview Questions</h2>
+						<p>by <a href="#">Slava Shestopalov</a></p>
+						<p>Right questions don’t simply roll off the tongue, but it’s a handy skill everyone can train. The following pieces of advice will help you to formulate questions that foster reliable answers from your users and clients.
+						</p>
+
+					</div>
+					
+					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
+				</div>
+				<div class="articlesDes">
+					<div class="textContainer">
+						<span>8 Days ago</span>
+						<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+						<p>by <a href="#">Dayene David Abioudun</a></p>
+						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
+							tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up in
+							our application.
+						</p>
+					</div>					
+					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
+				</div>
+				<div class='smashingAd2'>
+					<div class='smashingContain'>
+						<div><img src="images/cat-smashing-tv-2.svg" alt="" class="catTv"></div>
+						<a class='smashinHeader'href="#">New on Smashing TV</a>
+						<a href='#' class='smashingPara2'><p class="meow__intro">A channel where seasoned developers show how they design, build, work and play.</p> </a>
+						<div class='smashBconta2'><button class='smashingButton2'>See all upcoming episodes&nbsp;→</button></div>
+						<p class='smashingFooter'>Already have an account?<a href='#'>  Sign in</a></p>
+					</div>
 				</div>
 			</div>
 		</section>
