Add featured book part and update membership part.

--- a/index.html
+++ b/index.html
@@ -332,6 +332,21 @@
 			</div>
 		</section>
 
+		<section class="wholeFeaturedBook font-balmasiq">
+            <div class="featuredBook">
+                <div class="featuredBookText">
+					<h3>FEATURED SMASHING BOOK</h3>
+					<h1>Design Systems</h1>
+					<h5>Meet <b>Design Systems</b>, a recent Smashing book in which Alla Kholmatova explores how to set up an <b>effective design system</b> to create great digital products. With common traps, gotchas and lessons learned.</h5>
+                    
+                    <a class="tableOfContentsButton" href="#">Jump to table of contents</a>
+                </div>
+                <div class="featuredBookImage">
+                    <img src="images/design-systems-hardcover-book.png" alt="">
+                </div>
+            </div>
+		</section>
+		
 
 	</main>
 	<footer>
