Add Footer part

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style/styles.css" />
@@ -350,8 +350,8 @@
 				</div>
 			</div>
 			<div>
-				<a class="more-content-button" href="#">MORE LINKS ON TWITTER <i class="fa fa-long-arrow-right"
-						aria-hidden="true"></i></a>
+				<a class="more-content-button" href="#">MORE LINKS ON TWITTER </a><i class="fa fa-long-arrow-right"
+				aria-hidden="true"></i>
 			</div>
 		</section>
 
@@ -372,10 +372,81 @@
 			</div>
 		</section>
 
-
+		<br>
 	</main>
 	<footer>
+		<section class="allFooter">
+			<div class="footerMenuItems">
+				<h3>BROWSE ALL SMASHING MAGAZINE TOPICS</h3>
+				<ul >
+					<li><a href="#">Accessibility</a></li>
+	<li><a href="#">Android</a> 	</li>
+	<li><a href="#">Animation</a> 	</li>
+	<li><a href="#">Apps</a> 	</li>
+	<li><a href="#">Design</a> 	</li>
+	<li><a href="#">Design Patterns</a> 	 </li>
+	<li><a href="#">Design Systems</a> 	 </li>
+	<li><a href="#">E-Commerce</a> </li>
+	<li><a href="#">Freebies</a> 	</li>
+	<li><a href="#">Graphics</a> 	</li>
+	<li><a href="#">HTML</a> 	</li>
+	<li><a href="#">Illustrator</a> 	</li>
+	<li><a href="#">Inspiration</a> 	</li>
+	<li><a href="#">iOS</a> 	</li>
+	<li><a href="#">JavaScript</a> 	</li>
+	<li><a href="#">Mobile</a> 	</li>
+	<li><a href="#">Pattern Libraries</a> 	 </li>
+	<li><a href="#">Performance</a> 	</li>
+	<li><a href="#">Photoshop</a> 	</li>
+	<li><a href="#">Plugins</a> 	</li>
+	<li><a href="#">React</a> 	</li>
+	<li><a href="#">Responsive Web Design</a> 	 </li>
+	<li><a href="#">Service Workers</a> 	 </li>
+	<li><a href="#">Sketch</a> 	</li>
+	<li><a href="#">Typography</a> 	</li>
+	<li><a href="#">UI</a> 	</li>
+	<li><a href="#">Usability</a> 	</li>
+	<li><a href="#">User Experience</a> 	 </li>
+	<li><a href="#">Wallpapers</a> 	</li>
+	<li><a href="#">Web Design</a> 	 </li>
+	<li><a href="#">WordPress</a> 	</li>
+	<li><a href="#">Workflow</a> 	</li>
+				</ul>
+				<p>With a commitment to quality content for the design community.
 
+					Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
+					
+					Smashing is proudly running on <a href="#">Netlify</a>.
+					
+					Fonts by <a href="#">Latinotype</a>.
+				</p>
+			</div>
+			<div class="copyright">
+				<ul class="ul-copyright">
+					<li class="li-copyright">
+						✎ <a href="#">Write for us</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">Contact us</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">About us(Impressum)</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">Privacy policy</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">Membership login</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">Delivery times</a>
+					</li>
+					<li class="li-copyright">
+						<a href="#">Advertise</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 	</footer>
 </body>
 
