Add sticky UP button.

--- a/index.html
+++ b/index.html
@@ -448,6 +448,11 @@
 			</div>
 		</section>
 	</footer>
+
+	<div class="upButton">
+		<a href="#"><i class="fa fa-angle-up fa-3x" aria-hidden="true"></i></a>
+	</div>
+
 </body>
 
 </html>
