Update the latest articles part

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		</nav>
 	</header>
 	<main>
+		<h1 class="latestArticlesHighlight"><span>Don’t Miss These Latest <br> Articles</span></h1>
 		<section class="latest-articles font-balmasiq">
 			<div style="background: #555555;" class='profileCon'>
 				<div class='imgContainer'>
@@ -54,7 +55,7 @@
 				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o"
 							aria-hidden="true"></i> Comment</p>
 				</h1>
-				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
+				<div class='spanContainer'><span># React<sup> 45</sup> </span><span># Javascript<sup> 274</sup></span><span># Tools<sup> 229</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #757575;" class='profileCon'>
@@ -67,7 +68,7 @@
 				</div>
 				<h1>Solving Common Cross-Platform Issues When Working with Flutter</h1>
 				<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p>
-				<div class='spanContainer'><span>Apps</span><span>Perfomance</span></div>
+				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #858585;" class='profileCon'>
@@ -81,7 +82,7 @@
 				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i
 							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
 				</h1>
-				<div class='spanContainer'><span>UI</span><span>API</span><span>Testing</span></div>
+				<div class='spanContainer'><span>User Experience<sup> 304</sup></span><span>Design<sup> 439</sup></span><span>Trends<sup> 26</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #959595;" class='profileCon'>
@@ -95,7 +96,7 @@
 				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<p class='inline'><i
 							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
 				</h1>
-				<div class='spanContainer'><span>Smashing Podcast</span></div>
+				<div class='spanContainer'><span>Apps<sup> 200</sup></span><span>Performance<sup> 124</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 		</section>
