--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o"
 							aria-hidden="true"></i> Comment</p>
 				</h1>
-				<div class='spanContainer'><span># React<sup> 45</sup> </span><span># Javascript<sup> 274</sup></span><span># Tools<sup> 229</sup></span></div>
+				<div class='spanContainer'><span># React<sup> 45</sup> </span><span># Javascript<sup>
+							274</sup></span><span># Tools<sup> 229</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #757575;" class='profileCon'>
@@ -81,7 +82,8 @@
 				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i
 							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
 				</h1>
-				<div class='spanContainer'><span>User Experience<sup> 304</sup></span><span>Design<sup> 439</sup></span><span>Trends<sup> 26</sup></span></div>
+				<div class='spanContainer'><span>User Experience<sup> 304</sup></span><span>Design<sup>
+							439</sup></span><span>Trends<sup> 26</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #959595;" class='profileCon'>
@@ -353,7 +355,7 @@
 			</div>
 			<div>
 				<a class="more-content-button" href="#">MORE LINKS ON TWITTER </a><i class="fa fa-long-arrow-right"
-				aria-hidden="true"></i>
+					aria-hidden="true"></i>
 			</div>
 		</section>
 
@@ -447,52 +449,52 @@
 				</div>
 
 
-		<br>
+				<br>
 	</main>
 	<footer>
 		<section class="allFooter">
 			<div class="footerMenuItems">
 				<h3>BROWSE ALL SMASHING MAGAZINE TOPICS</h3>
-				<ul >
+				<ul>
 					<li><a href="#">Accessibility</a></li>
-	<li><a href="#">Android</a> 	</li>
-	<li><a href="#">Animation</a> 	</li>
-	<li><a href="#">Apps</a> 	</li>
-	<li><a href="#">Design</a> 	</li>
-	<li><a href="#">Design Patterns</a> 	 </li>
-	<li><a href="#">Design Systems</a> 	 </li>
-	<li><a href="#">E-Commerce</a> </li>
-	<li><a href="#">Freebies</a> 	</li>
-	<li><a href="#">Graphics</a> 	</li>
-	<li><a href="#">HTML</a> 	</li>
-	<li><a href="#">Illustrator</a> 	</li>
-	<li><a href="#">Inspiration</a> 	</li>
-	<li><a href="#">iOS</a> 	</li>
-	<li><a href="#">JavaScript</a> 	</li>
-	<li><a href="#">Mobile</a> 	</li>
-	<li><a href="#">Pattern Libraries</a> 	 </li>
-	<li><a href="#">Performance</a> 	</li>
-	<li><a href="#">Photoshop</a> 	</li>
-	<li><a href="#">Plugins</a> 	</li>
-	<li><a href="#">React</a> 	</li>
-	<li><a href="#">Responsive Web Design</a> 	 </li>
-	<li><a href="#">Service Workers</a> 	 </li>
-	<li><a href="#">Sketch</a> 	</li>
-	<li><a href="#">Typography</a> 	</li>
-	<li><a href="#">UI</a> 	</li>
-	<li><a href="#">Usability</a> 	</li>
-	<li><a href="#">User Experience</a> 	 </li>
-	<li><a href="#">Wallpapers</a> 	</li>
-	<li><a href="#">Web Design</a> 	 </li>
-	<li><a href="#">WordPress</a> 	</li>
-	<li><a href="#">Workflow</a> 	</li>
+					<li><a href="#">Android</a> </li>
+					<li><a href="#">Animation</a> </li>
+					<li><a href="#">Apps</a> </li>
+					<li><a href="#">Design</a> </li>
+					<li><a href="#">Design Patterns</a> </li>
+					<li><a href="#">Design Systems</a> </li>
+					<li><a href="#">E-Commerce</a> </li>
+					<li><a href="#">Freebies</a> </li>
+					<li><a href="#">Graphics</a> </li>
+					<li><a href="#">HTML</a> </li>
+					<li><a href="#">Illustrator</a> </li>
+					<li><a href="#">Inspiration</a> </li>
+					<li><a href="#">iOS</a> </li>
+					<li><a href="#">JavaScript</a> </li>
+					<li><a href="#">Mobile</a> </li>
+					<li><a href="#">Pattern Libraries</a> </li>
+					<li><a href="#">Performance</a> </li>
+					<li><a href="#">Photoshop</a> </li>
+					<li><a href="#">Plugins</a> </li>
+					<li><a href="#">React</a> </li>
+					<li><a href="#">Responsive Web Design</a> </li>
+					<li><a href="#">Service Workers</a> </li>
+					<li><a href="#">Sketch</a> </li>
+					<li><a href="#">Typography</a> </li>
+					<li><a href="#">UI</a> </li>
+					<li><a href="#">Usability</a> </li>
+					<li><a href="#">User Experience</a> </li>
+					<li><a href="#">Wallpapers</a> </li>
+					<li><a href="#">Web Design</a> </li>
+					<li><a href="#">WordPress</a> </li>
+					<li><a href="#">Workflow</a> </li>
 				</ul>
 				<p>With a commitment to quality content for the design community.
 
 					Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
-					
+
 					Smashing is proudly running on <a href="#">Netlify</a>.
-					
+
 					Fonts by <a href="#">Latinotype</a>.
 				</p>
 			</div>
