--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,700&display=swap"
@@ -11,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
-	<title></title>
+	<title>Smashing Magazine Clone</title>
 	<link rel="stylesheet" type="text/css" href="style/styles.css" />
 </head>
 
@@ -20,15 +21,15 @@
 	<header id="header" class="">
 		<nav class="navbar">
 			<img class="main-logo" src="images/logo--full.svg" alt="">
-			<div> <button class="navbar-button" type="">Articles</button> </div>
-			<div> <button class="navbar-button" type="">Guides</button> </div>
-			<div> <button class="navbar-button" type="">Books</button> </div>
-			<div> <button class="navbar-button" type="">Events</button> </div>
-			<div> <button class="navbar-button" type="">Membership</button> </div>
-			<div> <button class="navbar-button" type="">Jobs</button> </div>
-			<div> <button class="navbar-button" type="">Newsletter</button> </div>
+			<div> <button class="navbar-button" type="button">Articles</button> </div>
+			<div> <button class="navbar-button" type="button">Guides</button> </div>
+			<div> <button class="navbar-button" type="button">Books</button> </div>
+			<div> <button class="navbar-button" type="button">Events</button> </div>
+			<div> <button class="navbar-button" type="button">Membership</button> </div>
+			<div> <button class="navbar-button" type="button">Jobs</button> </div>
+			<div> <button class="navbar-button" type="button">Newsletter</button> </div>
 			<div class="more-button">
-				<button style="padding-right: 0px;" class="buIcon" type="">More </button><img class="menu-cat-img"
+				<button style="padding-right: 0px;" class="buIcon" type="submit">More </button><img class="menu-cat-img"
 					src="images/menu-cat.svg" alt="">
 			</div>
 			<div class='formContainer'>
@@ -51,8 +52,8 @@
 					</div>
 
 				</div>
-				<h1>What Vitruvius Can Teach Us About Web Design <p class='inline'><i class="fa fa-envelope-o"
-							aria-hidden="true"></i> Comment</p>
+				<h1>What Vitruvius Can Teach Us About Web Design <span class='inline'><i class="fa fa-envelope-o"
+							aria-hidden="true"></i> Comment</span>
 				</h1>
 				<div class='spanContainer'><span># React<sup> 45</sup> </span><span># Javascript<sup>
 							274</sup></span><span># Tools<sup> 229</sup></span></div>
@@ -68,7 +69,7 @@
 				</div>
 				<h1>Solving Common Cross-Platform Issues When Working with Flutter</h1>
 				<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p>
-				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></div>
+				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
 			<div style="background: #858585;" class='profileCon'>
@@ -167,7 +168,7 @@
 						<div class='gramrBlock'>
 							<div><img class='gramIcon' src="images/logo-grammarly.svg" alt="grammarly"></div>
 							<p>Grammarly helps shape the way millions of people communicate every day!</p>
-							<button class='gramarButton'>JOIN THE TEAM!</button>
+							<button class='gramarButton' type="button">JOIN THE TEAM!</button>
 						</div>
 					</div>
 				</div>
@@ -177,7 +178,7 @@
 						<a class='smashinHeader' href="#">1,651 smashing members</a>
 						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books,
 							webinars, discounts and networking — for just 1 coffee a month. </a>
-						<div class='smashBconta'><button class='smashingButton'>Explore Features </div>
+						<div class='smashBconta'><button class='smashingButton' type="button">Explore Features </div>
 					</div>
 				</div>
 				<div class="articlesDes">
@@ -243,7 +244,7 @@
 								and play.</p>
 						</a>
 
-						<div class='smashBconta2'><button class='smashingButton2'>See all upcoming
+						<div class='smashBconta2'><button class='smashingButton2' type="button">See all upcoming
 								episodes&nbsp;→</button></div>
 						<p class='smashingFooter'>Already have an account?<a href='#'> Sign in</a></p>
 					</div>
@@ -389,7 +390,7 @@
 							frameworks, or just starting to learn, our authors have created
 							some tutorials for you.
 						</p>
-						<button class='techButton greenButton'>Explore JavaScript & Frameworks</button>
+						<button class='techButton greenButton' type="button">Explore JavaScript & Frameworks</button>
 					</div>
 
 
@@ -404,7 +405,7 @@
 						<p>In this article, we will build a facial recognition web app with the help of React and the
 							Face Recognition API, and cover the Face Detection model and Predict API.
 						</p>
-						<button class='techButton orangeButton'>Explore Css Layout</button>
+						<button class='techButton orangeButton' type="button">Explore Css Layout</button>
 
 					</div>
 
@@ -422,7 +423,7 @@
 							in
 							our application.
 						</p>
-						<button class='techButton purpleButton'>Explore Perfomance</button>
+						<button class='techButton purpleButton' type="button">Explore Perfomance</button>
 					</div>
 				</div>
 				<div class='articlesDes2 '>
@@ -436,7 +437,7 @@
 
 							<form class='formFinal'>
 								<div class='formFinalContainer'><input type='text' placeholder='  Your email'><button
-										type='submit'>Meow!</button></div>
+										type='button'>Meow!</button></div>
 							</form>
 							<div class='footerFinalAd'>
 								<p>Front-end, UX and design. 2× a month.
@@ -447,9 +448,8 @@
 						</div>
 					</div>
 				</div>
-
-
-				<br>
+			</div>	
+		</section>
 	</main>
 	<footer>
 		<section class="allFooter">
