--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 						<p class="profileName">Carmin Zaccagnino <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Solving Common Cross-Platform Issues When Working with Flutter</h1>
-				<p class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</p>
+				<h1>Solving Common Cross-Platform Issues When Working with Flutter 
+					<span class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</span>
+				</h1>
+				
 				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
@@ -80,8 +82,8 @@
 						<p class="profileName">Chidi Orji <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<p class='inline'><i
-							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
+				<h1>Mirage JS Deep Dive Using Mirage JS and Cypress For UI Testing (Part 4)<span class='inline'><i
+							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</span>
 				</h1>
 				<div class='spanContainer'><span>User Experience<sup> 304</sup></span><span>Design<sup>
 							439</sup></span><span>Trends<sup> 26</sup></span></div>
@@ -95,8 +97,8 @@
 						<p class="profileName">Drew MacLellan <em>wrote</em></p>
 					</div>
 				</div>
-				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<p class='inline'><i
-							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</p>
+				<h1 class="">Smashing Podcast E pisode 18 with Mina Markma:How I can learn React?<span class='inline'><i
+							class="fa fa-envelope-o" aria-hidden="true"></i> Leave a Comment</span>
 				</h1>
 				<div class='spanContainer'><span>Apps<sup> 200</sup></span><span>Performance<sup> 124</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
